# docx-redline-online

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.single.yml  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml  tsconfig.base.json
.github/workflows/: ci.yml  release.yml  verify-hosted.yml
apps/web/: Dockerfile  next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  (+2 more)
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/docx_redline_worker/: __init__.py  config.py  main.py  schemas.py
apps/worker/src/docx_redline_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/worker/src/docx_redline_worker/routers/: comments.py  compare.py  content_controls.py  convert.py  document_elements.py  tracked.py
apps/worker/src/docx_redline_worker/services/: comments.py  compare.py  content_controls.py  conversion.py  document_elements.py  sample_documents.py  tracked_changes.py
apps/worker/tests/: helpers.py  test_acceptance.py  test_comments.py  test_compare.py  test_content_controls.py  test_conversion_goldens.py  test_convert.py  test_document_elements.py  test_health.py  test_tracked.py
apps/worker/tests/golden/: contract-redline.html  contract-redline.md  generic-images.html  generic-images.md  manuscript-comments.html  manuscript-comments.md
docs/: HOSTED_DEPLOYMENT_RUNBOOK.md  QC_APPENDIX_B.md
scripts/: build_a1_word_report.py  export_word_compare_baseline.ps1  measure_compare.py  render_blueprint_link.py  run_lighthouse.mjs  verify_hosted.py
(+13 files in other folders)
