[project]
name = "docx-redline-worker"
version = "0.1.0"
description = "FastAPI worker for DOCX conversion, comments extraction, tracked changes, and compare."
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<0.116",
  "httpx>=0.28,<0.29",
  "lxml>=5.3,<6.0",
  "mammoth>=1.9,<2.0",
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.7,<3.0",
  "python-docx>=1.1,<2.0",
  "python-multipart>=0.0.20,<0.0.21",
  "uvicorn[standard]>=0.34,<0.35"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<0.26"
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
